[Chore] Migrate modules handler, http, transport into core